Modify to use new Java features